# virtual-natsumatsuri-backend

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/: push-to-artifact-registry.yml
.github/workflows/: ci.yml  deploy.yml  push-to-artifact-registry.yml
src/: handler.rs  main.rs  model.rs  router.rs  usecase.rs
src/handler/: hello.rs  shooter.rs  ws.rs
src/model/: query.rs  schema.rs  sender.rs  shooter.rs  shooting.rs
src/usecase/: shooting.rs
