[package]
name = "virtual-natsumatsuri"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
futures-util = "0.3.30"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
